<resources>
    <string name="app_name">Classe Royale</string>
    <string name="quiz_results_title">Résultat du quiz</string>
    <string name="about_button">À propos</string>
    <string name="difficulty_label">Niveau de difficulté : %1$s</string>
    <string name="score_label">Score : %1$d / %2$d</string>
    <string name="success_label">Réussite : %1$.0f%%</string>
    <string name="group">Groupe 4</string>
    <string name="version_label">Version : %1$s</string>
    <string name="version_error">Erreur</string>
    <string name="quiz_loading">Chargement...</string>
    <string name="quiz_validate">Valider</string>
    <string name="quiz_next">Suivant</string>
    <string name="quiz_finish">Terminer</string>
    <string name="quiz_select_answer">Veuillez sélectionner une réponse.</string>
    <string name="quiz_correct">Bonne réponse.</string>
    <string name="quiz_wrong">Mauvaise réponse.</string>
    <string name="quiz_error_no_questions">Aucune question récupérée.</string>
    <string name="quiz_error_load">Impossible de charger le quiz.</string>
    <string name="quiz_toast_questions_error">Impossible de charger les questions.</string>
    <string name="quiz_progress">Question %1$d / %2$d</string>
    <string name="quiz_difficulty_easy">Facile</string>
    <string name="quiz_difficulty_medium">Moyen</string>
    <string name="quiz_difficulty_hard">Difficile</string>
    <string name="quiz_difficulty_hardcore">Hardcore</string>
    <string name="quiz_difficulty_unknown">Inconnu</string>
    <string name="quiz_back_to_menu">Retour au menu</string>
    <string name="quiz_options_title">Options du quiz</string>
    <string name="quiz_options_confirm">Commencer</string>
    <string name="quiz_options_cancel">Annuler</string>
    <string name="quiz_options_difficulty_label">Sélectionne une difficulté</string>
    <string name="quiz_option_mode_hardcore">Mode Hardcore</string>
    <string name="quiz_option_time_attack">Mode Time Attack</string>
    <string name="quiz_timer_expired">Temps écoulé !</string>
    <string name="global_questions_label">Questions : %1$d</string>
    <string name="global_success_label">Réussite : %1$.0f%%</string>
    <string name="global_correct_lable">Bonnes réponses : %1$d</string>
    <string name="share">Partager</string>
    <string name="share_message">Mon score était de %1$.0f%% sur Classe Royal !!</string>
</resources>