<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/difficultyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_options_difficulty_label"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:paddingBottom="8dp" />

        <RadioGroup
            android:id="@+id/difficultyGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/difficultyEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="0"
                android:text="@string/quiz_difficulty_easy" />

            <RadioButton
                android:id="@+id/difficultyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/quiz_difficulty_medium" />

            <RadioButton
                android:id="@+id/difficultyHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/quiz_difficulty_hard" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <CheckBox
            android:id="@+id/hardcoreModeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_option_mode_hardcore" />

        <CheckBox
            android:id="@+id/timeAttackCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_option_time_attack" />

    </LinearLayout>
</ScrollView>
